--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -55,6 +55,7 @@
       href: machine-learning-pytorch.md
     - name: 创建自定义 Linux 映像
       href: functions-create-function-linux-custom-image.md
+      displayName: 'container, docker'
     - name: IoT Edge 设备上的 Functions
       href: ../iot-edge/tutorial-deploy-function.md?toc=%2fazure%2fazure-functions%2ftoc.json
     - name: 将 Java 与 Azure Cosmos DB 和事件中心配合使用
@@ -252,7 +253,7 @@
           href: run-functions-from-deployment-package.md
         - name: Kubernetes 中的 Functions
           href: functions-kubernetes-keda.md
-          displayName: keda
+          displayName: 'keda, container, docker'
         - name: 自动执行资源部署
           href: functions-infrastructure-as-code.md
         - name: 本地函数
@@ -296,6 +297,8 @@
               href: ../app-service/configure-authentication-provider-microsoft.md?toc=%2fazure%2fazure-functions%2ftoc.json
             - name: 使用 Twitter 进行身份验证
               href: ../app-service/configure-authentication-provider-twitter.md?toc=%2fazure%2fazure-functions%2ftoc.json
+            - name: 使用 OpenID Connect 提供程序进行身份验证（预览）
+              href: ../app-service/configure-authentication-provider-openid-connect.md?toc=%2fazure%2fazure-functions%2ftoc.json
         - name: 高级身份验证
           href: ../app-service/app-service-authentication-how-to.md?toc=%2fazure%2fazure-functions%2ftoc.json
         - name: 限制 IP
@@ -500,6 +503,8 @@
   items:
     - name: 利用 Microsoft Learn 掌握技能
       href: /learn/browse/?products=azure-functions
+    - name: 体系结构指南
+      href: 'https://docs.microsoft.com/azure/architecture/serverless-quest/serverless-overview'
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/?category=compute'
     - name: 定价
