--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -100,6 +100,8 @@
           href: event-grid-logicapps.md
         - name: 通过 Azure 事件网格和 Azure 自动化接收通知
           href: event-grid-tutorial.md
+        - name: 备份单个密钥保管库对象
+          href: backup.md
     - name: 安全
       items:
         - name: 与 Azure 专用链接服务集成
