--- a/articles/remote-rendering/overview/features/toc.yml
+++ b/articles/remote-rendering/overview/features/toc.yml
@@ -4,6 +4,8 @@
   href: debug-rendering.md
 - name: 分层状态替代
   href: override-hierarchical-state.md
+- name: 暂存空间
+  href: stage-space.md
 - name: 后期阶段重新投影
   href: late-stage-reprojection.md
 - name: 场景照明
