--- a/articles/azure-arc/toc.yml
+++ b/articles/azure-arc/toc.yml
@@ -56,3 +56,7 @@
               href: ./servers/manage-vm-extensions.md
             - name: 管理代理
               href: ./servers/manage-agent.md
+        - name: 疑难解答
+          items:
+            - name: 代理连接问题
+              href: ./servers/troubleshoot-agent-onboard.md
