--- a/articles/azure-maps/index.yml
+++ b/articles/azure-maps/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 1/15/2020
-  ms.openlocfilehash: 83a51c7dff6d616297c7f558b20e7d1934c668d6
-  ms.sourcegitcommit: 0b80a5802343ea769a91f91a8cdbdf1b67a932d3
+  ms.openlocfilehash: a48aa9c3c18784205f6780bf20d9790f24e56c90
+  ms.sourcegitcommit: dabd9eb9925308d3c2404c3957e5c921408089da
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/25/2020
-  ms.locfileid: "83829880"
+  ms.lasthandoff: 07/11/2020
+  ms.locfileid: "86242383"
 landingContent:
 - title: 关于 Azure Maps
   linkLists:
@@ -176,7 +176,7 @@ landingContent:
     links:
     - text: Azure Maps 事件网格集成
       url: azure-maps-event-grid-integration.md
-  - linkListType: tutorial
+  - linkListType: how-to-guide
     links:
     - text: 使用 Azure Maps 设置地理围栏
       url: tutorial-geofence.md
@@ -188,6 +188,16 @@ landingContent:
       url: https://docs.microsoft.com/rest/api/maps/data
     - text: 空间服务
       url: https://docs.microsoft.com/rest/api/maps/spatial
+- title: 用 Power BI 进行空间分析
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: 入门
+      url: power-bi-visual-getting-started.md
+    - text: 了解层次
+      url: power-bi-visual-understanding-layers.md
+    - text: 管理访问权限
+      url: power-bi-visual-manage-access.md
 - title: 使用出行服务进行开发
   linkLists:
   - linkListType: concept
