--- a/articles/active-directory/develop/index.yml
+++ b/articles/active-directory/develop/index.yml
@@ -1,232 +1,102 @@
 ### YamlMime:Landing
 title: Microsoft 标识平台文档
-summary: 开发人员可以通过 Microsoft 标识平台来生成应用程序，从而可以采用所有 Microsoft 标识登录，以及获取令牌来调用 Microsoft API（如 Microsoft Graph）或你已生成的 API。 这一全功能平台包含符合 OAuth 2.0 和 OpenID Connect 标准的身份验证服务、开源库、应用程序注册和配置、可靠的概念和参考文档、快速入门、代码示例、教程以及操作方法指南。
+summary: Microsoft 标识平台是一项身份验证服务，也是开源库和应用程序管理工具。 在我们的快速入门、教程和代码示例中了解如何创建基于标准的新式身份验证解决方案。 构建这样的应用程序，你的用户和客户登录它们来使用其 Microsoft 身份或社交帐户，或者它们授权访问你的 API 或 Microsoft API（例如 Microsoft Graph）。
 metadata:
   ms.topic: landing-page
-  ms.date: 06/22/2019
+  ms.date: 07/13/2020
   author: CelesteDG
   ms.author: celested
   ms.service: active-directory
   ms.subservice: develop
   ms.workload: identity
-  ms.openlocfilehash: d1f3958fd47f6e3e5f3971697de546b4cb738b3d
-  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
+  ms.openlocfilehash: 689fb9953f6de9c717d774e222824c5b3701527e
+  ms.sourcegitcommit: f7e160c820c1e2eb57dc480b2a8fd6bef7053e91
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/17/2020
-  ms.locfileid: "84886904"
+  ms.lasthandoff: 07/10/2020
+  ms.locfileid: "86230343"
 landingContent:
 - title: 关于 Microsoft 标识平台
   linkLists:
   - linkListType: overview
     links:
-    - text: Microsoft 标识平台 (v2.0)
+    - text: 什么是 Microsoft 标识平台？
       url: v2-overview.md
-    - text: Microsoft 标识平台的发展
-      url: about-microsoft-identity-platform.md
-    - text: 将应用迁移到 MSAL
+    - text: 代码示例
+      url: sample-v2-code.md
+    - text: 将 ADAL 应用迁移到 MSAL
       url: msal-migration.md
-    - text: 面向开发人员的 Azure Active Directory (v1.0)
-      url: ../azuread-dev/v1-overview.md
-  - linkListType: concept
+- title: 基本概念
+  linkLists:
+  - linkListType: learn
     links:
-    - text: 身份验证基础知识
-      url: authentication-scenarios.md
+    - text: 身份验证的基础知识
+      url: authentication-vs-authorization.md
     - text: 身份验证流和应用方案
       url: authentication-flows-app-scenarios.md
     - text: 最佳做法和建议
       url: identity-platform-integration-checklist.md
+- title: 视频学习系列
+  linkLists:
   - linkListType: video
     links:
-    - text: 序列：面向开发人员的标识平台
-      url: identity-videos.md
-- title: 构建单页应用
+    - text: 面向开发人员的标识平台
+      url: identity-videos.md#microsoft-identity-platform-for-developers
+    - text: 身份验证基础知识
+      url: identity-videos.md#authentication-fundamentals
+    - text: 一个开发问题：平台基础知识
+      url: identity-videos.md#microsoft-identity-platform-basics
+- title: 单页应用 (SPA)
   linkLists:
   - linkListType: get-started
     links:
-    - text: 方案概述
-      url: scenario-spa-overview.md
-  - linkListType: quickstart
-    links:
-    - text: JavaScript - 身份验证代码
-      url: quickstart-v2-javascript-auth-code.md
-    - text: JavaScript - 隐式
-      url: quickstart-v2-javascript.md
     - text: Angular
       url: quickstart-v2-angular.md
-  - linkListType: tutorial
-    links:
-    - text: JavaScript - 身份验证代码
-      url: tutorial-v2-javascript-auth-code.md
-    - text: JavaScript - 隐式
-      url: tutorial-v2-javascript-spa.md
-  - linkListType: download
-    links:
-    - text: 示例 - JavaScript、Angular
-      url: sample-v2-code.md#single-page-applications
-    - text: 示例 - 将 SPA 与 Azure AD B2C 配合使用
-      url: https://github.com/Azure-Samples/active-directory-b2c-javascript-msal-singlepageapp
-- title: 构建用于让用户登录的 Web 应用
+    - text: JavaScript - 身份验证代码流
+      url: quickstart-v2-javascript-auth-code.md
+    - text: JavaScript - 隐式流
+      url: quickstart-v2-javascript.md
+- title: Web 应用
   linkLists:
   - linkListType: get-started
     links:
-    - text: 方案概述
-      url: scenario-web-app-sign-user-overview.md
-  - linkListType: quickstart
-    links:
-    - text: ASP.NET Core
-      url: quickstart-v2-aspnet-core-webapp.md
     - text: ASP.NET
       url: quickstart-v2-aspnet-webapp.md
-    - text: Java
-      url: quickstart-v2-java-webapp.md
+    - text: ASP.NET Core
+      url: quickstart-v2-aspnet-core-webapp.md
     - text: Python
       url: quickstart-v2-python-webapp.md
-  - linkListType: tutorial
-    links:
-    - text: ASP.NET Core
-      url: https://github.com/Azure-Samples/active-directory-aspnetcore-webapp-openidconnect-v2
-  - linkListType: download
-    links:
-    - text: 示例 - ASP.NET Core、ASP.NET、Java、Python
-      url: sample-v2-code.md#web-applications
-- title: 构建用于调用 Web API 的 Web 应用
+- title: 移动/本机应用
   linkLists:
   - linkListType: get-started
     links:
-    - text: 方案概述
-      url: scenario-web-app-call-api-overview.md
-  - linkListType: quickstart
-    links:
-    - text: Java
-      url: quickstart-v2-java-webapp.md
-    - text: Python
-      url: quickstart-v2-python-webapp.md
-  - linkListType: tutorial
-    links:
-    - text: ASP.NET Core
-      url: https://github.com/Azure-Samples/active-directory-aspnetcore-webapp-openidconnect-v2#scope-of-this-tutorial
-  - linkListType: download
-    links:
-    - text: 示例 - ASP.NET Core、ASP.NET、Node.js、Ruby、Java、Python
-      url: sample-v2-code.md#web-applications
-- title: 构建受保护的 Web API
-  linkLists:
-  - linkListType: get-started
-    links:
-    - text: 方案概述
-      url: scenario-protected-web-api-overview.md
-  - linkListType: tutorial
-    links:
-    - text: ASP.NET Core Web API
-      url: https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2
-  - linkListType: download
-    links:
-    - text: 示例 - ASP.NET
-      url: https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2
-- title: 用于调用 Web API 的 Web API
-  linkLists:
-  - linkListType: get-started
-    links:
-    - text: 方案概述
-      url: scenario-web-api-call-api-overview.md
-  - linkListType: tutorial
-    links:
-    - text: 用于调用 Microsoft Graph 的 ASP.NET Core Web API
-      url: https://github.com/Azure-Samples/active-directory-dotnet-native-aspnetcore-v2/tree/master/2.%20Web%20API%20now%20calls%20Microsoft%20Graph
-    - text: 用于调用 Microsoft Graph 的 Java Web API
-      url: https://github.com/Azure-Samples/ms-identity-java-webapi
-- title: 构建用于调用 Web API 的桌面应用
-  linkLists:
-  - linkListType: get-started
-    links:
-    - text: 方案概述
-      url: scenario-desktop-overview.md
-  - linkListType: quickstart
-    links:
-    - text: 获取令牌并调用 Microsoft Graph API（Windows 桌面）
-      url: quickstart-v2-windows-desktop.md
-    - text: 获取令牌并调用 Microsoft Graph API (UWP)
-      url: quickstart-v2-uwp.md
-  - linkListType: tutorial
-    links:
-    - text: 调用 Microsoft Graph API（Windows 桌面）
-      url: tutorial-v2-windows-desktop.md
-    - text: 调用 Microsoft Graph API (UWP)
-      url: tutorial-v2-windows-uwp.md
-  - linkListType: download
-    links:
-    - text: 示例 - .NET、.NET Core、Java、Python
-      url: sample-v2-code.md#desktop-and-mobile-public-client-apps
-- title: 构建用于调用 Web API 的守护程序应用
-  linkLists:
-  - linkListType: get-started
-    links:
-    - text: 方案概述
-      url: scenario-daemon-overview.md
-  - linkListType: quickstart
-    links:
-    - text: 获取令牌并调用 Microsoft Graph API（.NET Core 控制台）
-      url: quickstart-v2-netcore-daemon.md
-    - text: 获取令牌并调用 Microsoft Graph API（ASP.NET Web 应用）
-      url: https://github.com/Azure-Samples/ms-identity-aspnet-daemon-webapp
-  - linkListType: download
-    links:
-    - text: 示例 - ASP.NET 控制台、ASP.NET Web、Java、Python
-      url: sample-v2-code.md#daemon-applications
-- title: 构建用于调用 Web API 的移动应用
-  linkLists:
-  - linkListType: get-started
-    links:
-    - text: 方案概述
-      url: scenario-mobile-overview.md
-  - linkListType: quickstart
-    links:
-    - text: 获取令牌并调用 Microsoft Graph API (Android)
+    - text: Android
       url: quickstart-v2-android.md
-    - text: 获取令牌并调用 Microsoft Graph API (iOS)
+    - text: iOS 和 macOS
       url: quickstart-v2-ios.md
-    - text: 获取令牌并调用 Microsoft Graph API（Xamarin iOS 和 Android）
-      url: https://github.com/Azure-Samples/active-directory-xamarin-native-v2
-  - linkListType: tutorial
-    links:
-    - text: 使用户登录并调用 Microsoft Graph API (Android)
-      url: tutorial-v2-android.md
-    - text: 使用户登录并调用 Microsoft Graph API (iOS)
-      url: tutorial-v2-ios.md
-  - linkListType: download
-    links:
-    - text: 示例 - Android、iOS、Xamarin
-      url: sample-v2-code.md#desktop-and-mobile-public-client-apps
-- title: 调用 Microsoft Graph API
+    - text: Windows 桌面 (WPF)
+      url: quickstart-v2-windows-desktop.md
+- title: 保护 Web API
   linkLists:
-  - linkListType: overview
+  - linkListType: get-started
     links:
-    - text: 关于 Microsoft Graph
-      url: https://docs.microsoft.com/graph/overview
-  - linkListType: quickstart
-    links:
-    - text: 在 3 分钟内启动并运行
-      url: https://developer.microsoft.com/graph/get-started
-  - linkListType: learn
-    links:
-    - text: 使用 API
-      url: https://docs.microsoft.com/graph/use-the-api
-    - text: Microsoft Graph REST API v1.0
-      url: https://docs.microsoft.com/graph/api/overview?toc=.%2Fref%2Ftoc.json&view=graph-rest-1.0
-    - text: Microsoft Graph REST API Beta
-      url: https://docs.microsoft.com/graph/api/overview?toc=.%2Fref%2Ftoc.json&view=graph-rest-beta
-  - linkListType: deploy
-    links:
-    - text: Graph 浏览器
-      url: https://developer.microsoft.com/graph/graph-explorer/
-- title: 构建允许使用社交和本地标识登录的面向客户的应用
+    - text: ASP.NET
+      url: quickstart-v2-dotnet-native-aspnet.md
+    - text: ASP.NET Core
+      url: https://docs.microsoft.com/samples/azure-samples/active-directory-dotnet-native-aspnetcore-v2/calling-an-aspnet-core-web-api-from-a-wpf-application-using-azure-ad-v2/
+- title: Microsoft Graph
   linkLists:
-  - linkListType: overview
+  - linkListType: get-started
     links:
-    - text: 关于 Azure AD B2C
-      url: https://docs.microsoft.com/azure/active-directory-b2c/active-directory-b2c-overview
-  - linkListType: tutorial
+    - text: 使用 Microsoft Graph API
+      url: microsoft-graph-intro.md
+    - text: Microsoft Graph 身份验证概述
+      url: https://docs.microsoft.com/graph/auth/
+- title: SAML 2.0
+  linkLists:
+  - linkListType: get-started
     links:
-    - text: 将标识提供程序添加到 Azure AD B2C 中的应用
-      url: https://docs.microsoft.com/azure/active-directory-b2c/tutorial-add-identity-providers
+    - text: Azure AD 使用 SAML 协议的方式
+      url: active-directory-saml-protocol-reference.md
+    - text: Azure AD 中的 SAML SSO
+      url: single-sign-on-saml-protocol.md
