--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -232,6 +232,24 @@
           href: how-to-add-tile-layer-android-map.md
         - name: 显示交通情况数据
           href: how-to-show-traffic-android.md
+    - name: 在 Power BI 中使用 Azure Maps
+      items:
+        - name: 入门
+          href: power-bi-visual-getting-started.md
+        - name: 了解层次
+          href: power-bi-visual-understanding-layers.md
+        - name: 添加气泡层
+          href: power-bi-visual-add-bubble-layer.md
+        - name: 添加条形图层
+          href: power-bi-visual-add-bar-chart-layer.md
+        - name: 添加引用层
+          href: power-bi-visual-add-reference-layer.md
+        - name: 添加图块层
+          href: power-bi-visual-add-tile-layer.md
+        - name: 显示实时流量
+          href: power-bi-visual-show-real-time-traffic.md
+        - name: 管理访问权限
+          href: power-bi-visual-manage-access.md
     - name: 提供数据反馈
       href: how-to-use-feedback-tool.md
 - name: 参考
