--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -921,6 +921,8 @@
                   href: virtual-machines/windows/storage-configuration.md
                 - name: Azure Key Vault 集成
                   href: virtual-machines/windows/azure-key-vault-integration-configure.md
+                - name: 将存储迁移到 UltraSSD
+                  href: virtual-machines/windows/storage-migrate-to-ultradisk.md
                 - name: 注册 SQL VM RP
                   displayName: 'resource provider, registration'
                   items:
