--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -16,6 +16,8 @@
       href: tutorial-access-private-cloud.md
     - name: 5 - 缩放私有云
       href: tutorial-scale-private-cloud.md
+    - name: 6 - 创建内容库
+      href: tutorial-deploy-vm-content-library.md
 - name: 概念
   items:
     - name: 私有云和群集
