--- a/articles/industry/agriculture/toc.yml
+++ b/articles/industry/agriculture/toc.yml
@@ -17,6 +17,8 @@
       href: integration-patterns-in-azure-farmbeats.md
     - name: 传感器合作伙伴集成
       href: sensor-partner-integration-in-azure-farmbeats.md
+    - name: 天气应用合作伙伴集成
+      href: weather-partner-integration-in-azure-farmbeats.md
     - name: 图像合作伙伴集成
       href: imagery-partner-integration-in-azure-farmbeats.md
 - name: 操作方法指南
@@ -29,6 +31,8 @@
       href: manage-farms-in-azure-farmbeats.md
     - name: 获取传感器数据
       href: get-sensor-data-from-sensor-partner.md
+    - name: 获取天气数据
+      href: get-weather-data-from-weather-partner.md
     - name: 生成地图
       href: generate-maps-in-azure-farmbeats.md
     - name: 配置规则并管理警报
