--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -140,8 +140,6 @@
                   href: /rest/api/storageservices/authorize-with-shared-key
                 - name: 使用共享访问签名 (SAS) 委托访问
                   href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 匿名访问 Blob
-                  href: storage-manage-access-to-resources.md
             - name: 授权管理操作
               href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 不可变 blob
@@ -361,6 +359,14 @@
                       href: ../common/storage-account-sas-create-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: 定义存储访问策略
                       href: ../common/storage-stored-access-policy-define-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 管理对 Blob 数据的匿名读取访问
+                  items:
+                    - name: 配置对容器和 Blob 的匿名读取访问
+                      href: anonymous-read-access-configure.md
+                    - name: 防止对 Blob 数据的匿名读取访问
+                      href: anonymous-read-access-prevent.md
+                    - name: 匿名访问公共容器和 Blob (.NET)
+                      href: anonymous-read-access-client.md
             - name: 管理 Azure 存储加密
               items:
                 - name: 检查 Blob 是否已加密
@@ -379,6 +385,8 @@
                           href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 在请求中提供加密密钥
                   href: storage-blob-customer-provided-key.md
+                - name: 为存储帐户启用基础结构加密
+                  href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 配置客户端加密
               items:
                 - name: .NET
@@ -393,8 +401,12 @@
                   href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 配置防火墙和虚拟网络
                   href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 启用传输层安全性
-                  href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 配置传输层安全性 (TLS)
+                  items:
+                    - name: 为存储帐户配置最低 TLS 版本
+                      href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                    - name: 为客户端应用程序配置 TLS
+                      href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 设置和管理不可变性策略
               href: storage-blob-immutability-policies-manage.md
         - name: 管理数据冗余
