--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -211,12 +211,18 @@
                   href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
                 - name: Azure CLI
                   href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 为存储帐户启用基础结构加密
+          href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2ffiless%2ftoc.json
         - name: 配置防火墙和虚拟网络
           href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 需要安全传输
           href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: 为 Azure 存储客户端启用安全 TLS
-          href: ../common/storage-security-tls.md
+        - name: 配置传输层安全性 (TLS)
+          items:
+            - name: 为存储帐户配置最低 TLS 版本
+              href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: 为客户端应用程序配置 TLS
+              href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 传输
       items:
         - name: 入门 - AzCopy
